<resources>
    <string name="app_name">TimeManager</string>
    <string name="date_text">日付選択</string>
    <string name="defaulttime_text">00:00</string>
    <string name="wavyline">～</string>
    <string name="save">保存</string>
    <string name="breaktime">休憩時間</string>
    <string name="min">分</string>
    <string name="place">勤務地</string>
    <string name="spinnertext">月の労働時間</string>
    <string name="spinneryear">年</string>
    <string name="spinnermonth">月</string>
    <string name="end_date">締め日</string>
    <string name="end_date_description">毎月の締め日を設定</string>
    <string name="setting_title">Setting</string>
    <string name="option">オプション</string>
    <string name="overtime">残業時間</string>
    <string name="remarks">備考</string>
    <string name="submit">決定</string>
    <string name="update">更新</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">今日の労働時間：エラー</string>
</resources>
