<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.tomoki.timemanager.Advanced">

    <TextView
        android:id="@+id/TitleText"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overtime"
        android:focusable="true"
        android:focusableInTouchMode="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:background="@drawable/shape">

            <TextView
                android:id="@+id/startOvertimeText"
                android:textSize="40sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/defaulttime_text"
                android:onClick="showStartOvertimePickerDialog" />

            <TextView
                android:textSize="40sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wavyline" />

            <TextView
                android:id="@+id/endOvertimeText"
                android:textSize="40sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/defaulttime_text"
                android:onClick="showEndOvertimePickerDialog" />
        </LinearLayout>
    <EditText
        android:id="@+id/remarks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/remarks"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:theme="@style/NegativeButtonStyle"
        android:onClick="submit"/>

    </LinearLayout>