<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/editDateText"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/date_text"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:onClick="showDatePickerDialog" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:background="@drawable/shape">

        <TextView
            android:id="@+id/editStartTimeText"
            android:textSize="40sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/defaulttime_text"
            android:onClick="showStartTimePickerDialog" />

        <TextView
            android:textSize="40sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wavyline" />

        <TextView
            android:id="@+id/editEndTimeText"
            android:textSize="40sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/defaulttime_text"
            android:onClick="showEndTimePickerDialog" />

    </LinearLayout>
</LinearLayout>